--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -208,6 +208,8 @@
 					<img src="../resources/images/planets/atlantis1.png" alt="...">
 					<div class="caption">
 						<h3>Endor</h3>
+						<div id="endorWinner" class="winner"></div>
+						
 						<p>...</p>
 					</div>
 				</div>
