--- a/SpaceWars/WebContent/content/html/menuKarte.html
+++ b/SpaceWars/WebContent/content/html/menuKarte.html
@@ -34,7 +34,7 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<h3>
-					<span class="label  navbar-right" id="username">Spielername
+					<span class="label  navbar-text navbar-right" id="username">Spielername
 						ist auf der Brücke</span>
 				</h3>
 			</div>
