--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -45,7 +45,7 @@
 					<button type="button" class="btn btn-default  disabled">
 						Guthaben <span id="credits" class="badge">4000 $</span>
 					</button>
-					<button type="button" class="btn btn-danger" onclick="openShop()">
+					<button type="button" class="btn btn-danger" onclick="openReport()">
 						Report <span class="glyphicon glyphicon-list-alt"
 							aria-hidden="true"></span>
 					</button>
@@ -145,8 +145,9 @@
 			<div class="col-md-12">
 				<h2>
 					Report
-					<button type="button" class="close" aria-label="Schließen">
-						<span aria-hidden="true">&times;</span>
+					<button type="button" class="close" aria-label="Schließen"
+						onclick="closeReport()">
+						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 					</button>
 				</h2>
 			</div>
