--- a/SpaceWars/WebContent/content/html/menuTeam.html
+++ b/SpaceWars/WebContent/content/html/menuTeam.html
@@ -59,7 +59,7 @@
 			</div>
 			<div class="col-md-6">
 
-				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('human')">
+				<button type="button" class="btn-block btn-transparent" onclick="startPVP()">
 					<img src="../resources/images/Icon/HvsH.png" alt="..."
 						class="img-thumbnail" >
 				</button>
