--- a/SpaceWars/WebContent/content/html/menuKarte.html
+++ b/SpaceWars/WebContent/content/html/menuKarte.html
@@ -51,7 +51,6 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				
 				<!-- Carousel
     ================================================== -->
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -64,9 +63,7 @@
 
 					<div class="carousel-inner" role="listbox">
 						<div class="item active">
-							<img class="first-slide"
-								src="../resources/images/Karten/three.jpg"
-								alt="First slide">
+							<img class="first-slide" src="../resources/images/Karten/three.png" alt="First slide">
 							<div class="container">
 								<div class="carousel-caption">
 									<h1>Kleines Universum</h1>
@@ -80,7 +77,7 @@
 						</div>
 						<div class="item">
 							<img class="second-slide"
-								src="../resources/images/Karten/five.jpg"
+								src="../resources/images/Karten/five.png"
 								alt="Second slide">
 							<div class="container">
 								<div class="carousel-caption">
@@ -94,7 +91,7 @@
 						</div>
 						<div class="item">
 							<img class="third-slide"
-								src="../resources/images/Karten/seven.jpg"
+								src="../resources/images/Karten/seven.png"
 								alt="Third slide">
 							<div class="container">
 								<div class="carousel-caption">
