--- a/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
@@ -49,9 +49,7 @@
 			<label for="username" class="sr-only">Name</label> <input
 				id="gameName" class="form-control"
 				placeholder="Wie soll Ihr Spiel heißen?" required="" autofocus=""
-				type="input"> <label for="inputPassword" class="sr-only">Password</label>
-			<input type="password" id="inputPassword" class="form-control"
-				placeholder="Züchtiges Passwort bitte!" required>
+				type="input"> 
 
 			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="createGame()">Spiel
 				starten</button>
