--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -187,18 +187,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerErde">Fabian</span></span>
+									id="winnerErde">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportErde" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftErde" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportErde" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftErde" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -228,18 +228,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerTatooine">Fabian</span></span>
+									id="winnerTatooine">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportTatooine" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftTatooine" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportTatooine" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftTatooine" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -267,18 +267,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerCoruscant">Fabian</span></span>
+									id="winnerCoruscant">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportCoruscant" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftCoruscant" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportCoruscant" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftCoruscant" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -306,18 +306,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerGermenon">Fabian</span></span>
+									id="winnerGermenon">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportGermenon" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftGermenon" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportGermenon" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftGermenon" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -345,18 +345,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerCaprica">Fabian</span></span>
+									id="winnerCaprica">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportCaprica" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftCaprica" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportCaprica" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftCaprica" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -384,18 +384,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerEndor">Fabian</span></span>
+									id="winnerEndor">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportEndor" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftEndor" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportEndor" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftEndor" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
@@ -423,18 +423,18 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerAtlantis">Fabian</span></span>
+									id="winnerAtlantis">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarReportAtlantis" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftAtlantis" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fighterReportAtlantis" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftAtlantis" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
