load on docReady

--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -86,5 +86,10 @@
 	<script src="../js/ie10-viewport-bug-workaround.js"></script>
 	<script src="../js/useful.js"></script>
 	<script src="../js/loadUsername.js"></script>
+	<script>
+		$(document).ready(function() {
+			getListOfOpenGames();
+		});
+	</script>
 </body>
 </html>
