--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -156,19 +156,19 @@
 
 			<!-- Tabs-Navs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" class="active"><a href="#erdeReport"
+				<li role="presentation" class="active" id="erdesReportButton"><a href="#erdeReport"
 					role="tab" data-toggle="tab">Erde</a></li>
-				<li role="presentation"><a href="#tatooineReport" role="tab"
+				<li role="presentation" id="tatooineReportButton"><a href="#tatooineReport" role="tab"
 					data-toggle="tab">Tatooine</a></li>
-				<li role="presentation"><a href="#coruscantReport" role="tab"
+				<li role="presentation" id="coruscantReportButton"><a href="#coruscantReport" role="tab"
 					data-toggle="tab">Coruscant</a></li>
-				<li role="presentation"><a href="#germenonReport" role="tab"
+				<li role="presentation" id="germenonReportButton"><a href="#germenonReport" role="tab"
 					data-toggle="tab">Germenon</a></li>
-				<li role="presentation"><a href="#capricaReport" role="tab"
+				<li role="presentation" id="capricaReportButton"><a href="#capricaReport" role="tab"
 					data-toggle="tab">Caprica</a></li>
-				<li role="presentation"><a href="#endorReport" role="tab"
+				<li role="presentation" id="endorReportButton"><a href="#endorReport" role="tab"
 					data-toggle="tab">Endor</a></li>
-				<li role="presentation"><a href="#atlantisReport" role="tab"
+				<li role="presentation" id="atlantisReportButton"><a href="#atlantisReport" role="tab"
 					data-toggle="tab">Atlantis</a></li>
 
 
