--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 yscroll">
-				<table class="table table-hover">
+				<table id = "tableOfOpenGames" class="table table-hover">
 					<tr>
 						<th>Spielname</th>
 						<th>Ersteller</th>
@@ -64,7 +64,7 @@
 						<td>Fabian</td>
 						<td>Mensch gegen Computer</td>
 						<td>Großes Universum</td>
-						<td><button class="btn btn-default btn-sm" type="button">Beitreten</button></td>
+						<td><button class="btn btn-default btn-sm" type="button">Beitreten</button></td></tr>
 				</table>
 			</div>
 		</div>
