--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -59,12 +59,12 @@
 						<th>Kartentyp</th>
 						<th></th>
 					</tr>
-					<tr>
-						<td>Testspiel</td>
-						<td>Fabian</td>
-						<td>Mensch gegen Computer</td>
-						<td>Großes Universum</td>
-						<td><button class="btn btn-default btn-sm" type="button">Beitreten</button></td></tr>
+<!-- 					<tr> -->
+<!-- 						<td>Testspiel</td> -->
+<!-- 						<td>Fabian</td> -->
+<!-- 						<td>Mensch gegen Computer</td> -->
+<!-- 						<td>Großes Universum</td> -->
+<!-- 						<td><button class="btn btn-default btn-sm" type="button">Beitreten</button></td></tr> -->
 				</table>
 			</div>
 		</div>
