--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -454,21 +454,23 @@
 
 			<div class="col-md-12">
 				<h2>Warten auf Gegener</h2>
-				<button type="button" class="close" aria-label="Schließen"
-					onclick="closeReport()">
-					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-				</button>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 belongs">
-				Während Sie warten, nutzen Sie die Zeit und schauen
-					Sie doch einmal bei einem unserer Sponsorn vorbei: <br/>
-				<br /> <img src="../resources/images/werbung.jpg" alt="..."
+			<div class="col-md-3 belongs"></div>
+			<div class="col-md-3 belongs">
+				<img src="../resources/images/werbung.jpg" alt="..."
 					class="img-thumbnail">
 			</div>
-
-
+			<div class="col-md-3 belongs"></div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 belongs">
+				Während Sie warten, nutzen Sie die Zeit und schauen Sie doch einmal
+				bei einem unserer Sponsorn vorbei: <br /> <br /> <img
+					src="../resources/images/werbung.jpg" alt="..."
+					class="img-thumbnail">
+			</div>
 		</div>
 
 	</div>
