--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -458,8 +458,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-3 belongs"></div>
-			<div class="col-md-3 belongs">
-				<img src="../resources/images/werbung.jpg" alt="..."
+			<div class="col-md-6 belongs">
+				<img src="../resources/images/werbung.png" alt="..."
 					class="img-thumbnail">
 			</div>
 			<div class="col-md-3 belongs"></div>
@@ -467,9 +467,8 @@
 		<div class="row">
 			<div class="col-md-12 belongs">
 				Während Sie warten, nutzen Sie die Zeit und schauen Sie doch einmal
-				bei einem unserer Sponsorn vorbei: <br /> <br /> <img
-					src="../resources/images/werbung.jpg" alt="..."
-					class="img-thumbnail">
+				bei einem unserer Sponsorn vorbei. 
+
 			</div>
 		</div>
 
