--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -156,14 +156,14 @@
 
 			<!-- Tabs-Navs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" class="active" id="erdesReportButton"><a
+				<li role="presentation" class="active" id="erdeReportButton"><a
 					href="#erdeReport" role="tab" data-toggle="tab">Erde</a></li>
 				<li role="presentation" id="tatooineReportButton"><a
 					href="#tatooineReport" role="tab" data-toggle="tab">Tatooine</a></li>
 				<li role="presentation" id="coruscantReportButton"><a
 					href="#coruscantReport" role="tab" data-toggle="tab">Coruscant</a></li>
-				<li role="presentation" id="germenonReportButton"><a
-					href="#germenonReport" role="tab" data-toggle="tab">Germenon</a></li>
+				<li role="presentation" id="geminiReportButton"><a
+					href="#geminiReport" role="tab" data-toggle="tab">Germenon</a></li>
 				<li role="presentation" id="capricaReportButton"><a
 					href="#capricaReport" role="tab" data-toggle="tab">Caprica</a></li>
 				<li role="presentation" id="endorReportButton"><a
@@ -290,7 +290,7 @@
 						</div>
 					</div>
 				</div>
-				<div role="tabpanel" class="tab-pane" id="germenonReport">
+				<div role="tabpanel" class="tab-pane" id="geminiReport">
 					<div class="row">
 
 						<div class="col-md-2 belongs">
@@ -300,24 +300,24 @@
 						<div class="col-md-4">
 							<h3>
 								<span class="label label-default">Sieger: <span
-									id="winnerGermenon">es hat kein Kampf Stattgefunden</span></span>
+									id="winnerGemini">es hat kein Kampf Stattgefunden</span></span>
 							</h3>
 
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="battlestarsLeftGermenon" class="badge textright">4</span>Verbleibende
+								<span id="battlestarsLeftGemini" class="badge textright">4</span>Verbleibende
 								Schlachtschiffe:
 							</button>
 							<br />
 							<button type="button"
 								class="btn btn-default disabled samewidthplus">
-								<span id="fightersLeftGermenon" class="badge textright">4</span>Verbleibende
+								<span id="fightersLeftGemini" class="badge textright">4</span>Verbleibende
 								Jäger
 							</button>
 						</div>
 						<div class="col-md-6">
 							<h3>Zerstörte Schiffe</h3>
-							<ul id="defeatedListGermenon">
+							<ul id="defeatedListGemini">
 								<li>Jäger von: Computer mit Rang Lieutenant</li>
 								<li>Jäger von: Computer mit Rang Lieutenant</li>
 								<li>Battlestar von: Fabian mit Rang Lieutenant</li>
@@ -465,7 +465,7 @@
 			<div class="col-md-3 belongs"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 belongs">
+			<div class="col-md-12">
 				Während Sie warten, nutzen Sie die Zeit und schauen Sie doch einmal
 				bei einem unserer Sponsorn vorbei. 
 
