--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -156,7 +156,7 @@
 
 			<!-- Tabs-Navs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" class="active" id="erdeReportButton"><a
+				<li role="presentation" id="erdeReportButton"><a
 					href="#erdeReport" role="tab" data-toggle="tab">Erde</a></li>
 				<li role="presentation" id="tatooineReportButton"><a
 					href="#tatooineReport" role="tab" data-toggle="tab">Tatooine</a></li>
@@ -176,7 +176,7 @@
 
 			<!-- Tab-Inhalte -->
 			<div class="tab-content">
-				<div role="tabpanel" class="tab-pane active" id="erdeReport">
+				<div role="tabpanel" class="tab-pane" id="erdeReport">
 
 					<div class="row">
 
