--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -156,19 +156,19 @@
 
 			<!-- Tabs-Navs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" id="erdeReportButton"><a
+				<li role="presentation" id="erdeReportButton" class="repButton"><a
 					href="#erdeReport" role="tab" data-toggle="tab">Erde</a></li>
-				<li role="presentation" id="tatooineReportButton"><a
+				<li role="presentation" id="tatooineReportButton" class="repButton"><a
 					href="#tatooineReport" role="tab" data-toggle="tab">Tatooine</a></li>
-				<li role="presentation" id="coruscantReportButton"><a
+				<li role="presentation" id="coruscantReportButton" class="repButton"><a
 					href="#coruscantReport" role="tab" data-toggle="tab">Coruscant</a></li>
-				<li role="presentation" id="geminiReportButton"><a
+				<li role="presentation" id="geminiReportButton" class="repButton"><a
 					href="#geminiReport" role="tab" data-toggle="tab">Germenon</a></li>
-				<li role="presentation" id="capricaReportButton"><a
+				<li role="presentation" id="capricaReportButton" class="repButton"><a
 					href="#capricaReport" role="tab" data-toggle="tab">Caprica</a></li>
-				<li role="presentation" id="endorReportButton"><a
+				<li role="presentation" id="endorReportButton" class="repButton"><a
 					href="#endorReport" role="tab" data-toggle="tab">Endor</a></li>
-				<li role="presentation" id="atlantisReportButton"><a
+				<li role="presentation" id="atlantisReportButton" class="repButton"><a
 					href="#atlantisReport" role="tab" data-toggle="tab">Atlantis</a></li>
 
 
