--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -136,6 +136,48 @@
 		</div>
 
 	</div>
+	<!----------------------------------------------------------Endreport---------------------------------------------------------->
+	<div id="endreport" class="fade in menu-box ">
+
+		<div class="row">
+
+			<div class="col-md-12">
+				<h2>Spiel Beendet</h2>
+			</div>
+		</div>
+		<div class="row">
+
+			<div class="col-md-12">
+				<h2>
+					<span class="label label-default"><span
+						id="winnerTotal">Du hast das Spiel nach 10 Runden gewonnen!</span></span>
+				</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+			
+
+			</div>
+			<div class="col-md-6">
+				
+				
+			</div>
+			
+		</div>
+		<div class="row">
+
+			<div class="col-md-12">
+				<button type="button" class="btn btn-danger center-button" onclick="finishGame()">
+					zurück zum Hauptmenü <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+				</button>
+			</div>
+		</div>
+		
+
+	</div>
+
+
 	<!----------------------------------------------------------Report---------------------------------------------------------->
 	<div id="report" class="fade in menu-box game-box popup">
 
